--- a/osmos.html
+++ b/osmos.html
@@ -86,7 +86,7 @@
 			document.getElementById('space').addEventListener('click', function(e) {
 				console.log('click');
 				var clickPosition = [e.layerX, e.layerY];
-				me.eject(Math.min(100, 0.01*me.mass), 0.1, toDegrees(angleBetween(me.position, clickPosition)));
+				me.eject(Math.min(100, 0.01*me.mass), 0.1, toDegrees(angleBetween(me.position, clickPosition)), clickPosition);
 			});
 
 			window.setInterval(function() { space.update(dt); }, dt);
